# Python.climate-lab

./: README.md  format_temperature_data_as_new_csv.py  formatted.csv  main.py  print_env.py  pyproject.toml
data/: Temperature_Celsius_5Col-2025.csv  Temperature_Celsius_5Col-2025.sha256  extract_temperature_data.py
